// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jbrowse-web app renders an empty model without crashing 1`] = `
Object {
  "browser": undefined,
  "configuration": Object {
    "_configId": Any<String>,
  },
  "drawerWidgets": Object {},
  "drawerWidth": 256,
  "selectedDrawerWidget": undefined,
  "views": Array [],
}
`;

exports[`jbrowse-web app restoring and rendering from snapshots renders root.snap.1.json without crashing 1`] = `
Object {
  "browser": undefined,
  "configuration": Object {
    "_configId": Any<String>,
  },
  "drawerWidgets": Object {},
  "drawerWidth": 256,
  "selectedDrawerWidget": undefined,
  "views": Array [
    Object {
      "configuration": Object {
        "_configId": Any<String>,
      },
    },
    Object {
      "configuration": Object {
        "_configId": Any<String>,
      },
    },
  ],
}
`;
